Added new route and improvements
