# docs/swagger.yaml
@@ -209,6 +209,32 @@ paths:
       summary: Create a skill for a contact
       tags:
       - Bind Skill To Contact
+  /contact-skills/{id}:
+    get:
+      consumes:
+      - application/x-www-form-urlencoded
+      description: This function is used to get all the skills for a given contact
+        id.
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.Skill'
+            type: array
+      security:
+      - bearerAuth: []
+      summary: Get a contact's skills
+      tags:
+      - Contact
   /contacts:
     get:
       consumes:
